# blackhole-simulator

./: CMakeLists.txt  MakeFile  main  main.c
include/: callbacks.h  camera.h  grid.h  math_utils.h  physics.h  renderer.h  shaders.h
src/: callbacks.c  camera.c  grid.c  main  main.c  math_utils.c  physics.c  renderer.c  shaders.c
